<resources>
    <string name="app_name">MAMProjekt</string>
    <string name="action_settings">Settings</string>

    <string name="main_menu_sensors">Sensory</string>
    <string name="main_menu_camera">Kamera</string>
    <string name="main_menu_split_screen">Podział ekranu</string>

    <string name="sensor_x">X:</string>
    <string name="sensor_y">Y:</string>
    <string name="sensor_z">Z:</string>
    <string name="sensor_acc">Akcelerometr</string>
    <string name="sensor_magnetic">Pole magnetyczne</string>
    <string name="sensor_gravity">Grawitacja</string>

    <string name="missing_sensor_acc">Brak akcelerometru</string>
    <string name="missing_sensor_magnetic">Brak czujnika pola magnetycznego</string>
    <string name="missing_sensor_gravity">Brak czujnika grawitacyjnego</string>

    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>

</resources>
