<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_menu_background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.dasztemb.mamprojekt.SensorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            style="@style/SensorTextHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sensor_acc" />

        <TextView
            android:id="@+id/txtAccelerationX"
            style="@style/SensorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensor_x" />

        <TextView
            android:id="@+id/txtAccelerationY"
            style="@style/SensorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensor_y" />

        <TextView
            android:id="@+id/txtAccelerationZ"
            style="@style/SensorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensor_z" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            style="@style/SensorTextHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:gravity="center"
            android:text="@string/sensor_magnetic" />

        <TextView
            android:id="@+id/txtMagneticX"
            style="@style/SensorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensor_x" />

        <TextView
            android:id="@+id/txtMagneticY"
            style="@style/SensorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensor_y" />

        <TextView
            android:id="@+id/txtMagneticZ"
            style="@style/SensorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensor_z" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            style="@style/SensorTextHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sensor_gravity" />

        <TextView
            android:id="@+id/txtGravityX"
            style="@style/SensorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensor_x" />

        <TextView
            android:id="@+id/txtGravityY"
            style="@style/SensorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensor_y" />

        <TextView
            android:id="@+id/txtGravityZ"
            style="@style/SensorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensor_z" />
    </LinearLayout>

</LinearLayout>
